--- a/index.html
+++ b/index.html
@@ -8,21 +8,29 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="logo.png" alt="Logo">
+        <div class="container">
+            <nav>
+                <ul class="left-nav">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                </ul>
+            </nav>
+            <div class="logo">
+                <img src="logo.png" alt="Logo">
+            </div>
+            <nav>
+                <ul class="right-nav">
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
     </header>
     <main>
         <h1>Welcome to My GitHub Page</h1>
         <p>This is my first GitHub Pages site.</p>
     </main>
 </body>
+</html>
+
 </html>
