--- a/index.html
+++ b/index.html
@@ -3,23 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>site184</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <nav>
-                <ul class="left-nav">
+            <div class="left-text">
+                <p>mariopuff</p>
+            </div>
+            <nav class="center-nav">
+                <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
-                </ul>
-            </nav>
-            <div class="logo">
-                <img src="logo.png" alt="Logo">
-            </div>
-            <nav>
-                <ul class="right-nav">
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -31,6 +27,4 @@
         <p>This is my first GitHub Pages site.</p>
     </main>
 </body>
-</html>
-
 </html>
