--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>site184</title>
+    <title>My GitHub Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="left-text">
-                <p>mariopuff</p>
+                <p>My Site</p>
             </div>
             <nav class="center-nav">
                 <ul>
@@ -28,3 +28,4 @@
     </main>
 </body>
 </html>
+
