--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="container">
             <div class="left-text">
-                <p>My Site</p>
+                <p>mariopuff</p>
             </div>
             <nav class="center-nav">
                 <ul>
