CUSTOM FONTS BABYYYY

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <div class="left-text">
                 <p>mariopuff</p>
             </div>
+	<div class="nav-text">
             <nav class="center-nav">
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -19,6 +20,7 @@
                     <li><a href="#">Connections</a></li>
                     <li><a href="#">Extras</a></li>
                 </ul>
+	</div>
             </nav>
         </div>
     </header>
