--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <li><a href="#">Connections</a></li>
                     <li><a href="#">Extras</a></li>
                 </ul>
+	    </div>
             </nav>
         </div>
     </header>
