--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <nav class="center-nav">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Connections</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Blog</a></li>
                     <li><a href="#">Extras</a></li>
                 </ul>
             </nav>
