--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         </div>
     </header>
     <main>
-        <h1>Welcome to My GitHub Page</h1>
-        <p>This is my first GitHub Pages site.</p>
+        <div class="centered-text">
+            <p>Welcome to My GitHub Page</p>
+        </div>
     </main>
 </body>
 </html>
