thank you for the mind

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </header>
     <main>
         <div class="centered-text">
-            <p>Welcome to My GitHub Page</p>
+            <p>THIS IS MARIOPUFF'S
+	    <br>OFFICIAL WEBSITE</p>
         </div>
     </main>
 </body>
