--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </div>
     </header>
     <main>
-        <div class="centered-text">
-            <p>THIS IS MARIOPUFF'S
-	    <br>OFFICIAL WEBSITE</p>
+        <div class="centered-text" style="font-family: 'SMW Superbig', sans-serif !important;">
+            THIS IS MARIOPUFF'S
+	<br>OFFICIAL WEBSITE
         </div>
     </main>
 </body>
