--- a/index.html
+++ b/index.html
@@ -7,31 +7,20 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="home-projects.css">
     <link rel="stylesheet" href="home-friends.css">
+    <link rel="stylesheet" href="home-socialmedia.css">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
 </head>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap');
-
-        /* Gradient Overlay */
-        .gradient-overlay {
-            position: absolute;
-            top: 420px;
-            left: 0;
-            width: 100%;
-            height: 200px;
-            background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 100%);
-            z-index: -1; /* Ensure it's above the projects content */
-            pointer-events: none; /* Allow interaction with underlying content */
-        }
 </style>
 <body>
     <header>
         <div class="container">
-            <div class="left-text">
+            <div class="left-text menu-toggle" aria-label="Toggle menu">
                 <p>mariopuff</p>
             </div>
             <nav class="center-nav">
-                <ul>
+                <ul class="nav-links">
                     <li><a href="#">Home</a></li>
                     <li><a href="projects">Projects</a></li>
                     <li><a href="blog">Blog</a></li>
@@ -137,7 +126,92 @@
             </div>
             <div class="friends-scroll-arrow right">&gt;</div>
         </div>
-        <script src="scroll-friends.js"></script>   
+        <script src="scroll-friends.js"></script> 
+        
+            <div class="social-media-container">
+            <h1>Social Media</h1>
+            <div class="social-scroll-arrow left">&lt;</div>
+            <div class="social-card-container">
+                <div class="card social-1">
+                    <h2>YouTube</h2>
+                    <h3>Mario_184</h3>
+                    <p>This is my main channel created in November 2021.
+                        I post random content, but you will find gaming
+                        most common. I play FNAF fangames, emulated
+                        Mario games, and more if you guys want me to play
+                        your recommended games.
+                    </p>
+                    <h3>Mariopuff & Friends</h3>
+                    <p>A seperate channel where I play games with my friends!
+                        We have a lot of fun together, and the nicest thing is we are open
+                        to invite one or two of you guys to hop in with us!
+                    </p>
+                    <a href="https://www.youtube.com/@mariopuff184/" class="social-button"><span class="icon">↗</span>Mario_184</a><br>
+                    <a href="https://www.youtube.com/@mariopuffandhomies/" class="social-button"><span class="icon">↗</span>Mariopuff & Friends</a>
+                </div>
+
+                <div class="card social-2">
+                    <h2>Discord</h2>
+                    <p>Out of all the social networking sites, Discord ranks top 2 on my usage list.
+                        I use it to check on my friends, post funny memes, stream funny games, participate
+                        in events, and more. Why don't you find me on Discord? DMs open.
+                    </p>
+                    <a href="https://discord.com/users/832629415828914248" class="social-button"><span class="icon">↗</span>mariopuff</a>
+                </div>
+
+                <div class="card social-3">
+                    <h2>Spotify</h2>
+                    <p>I listen to songs. So maybe you could reach out to me and share what your music taste is.
+                    I <b>might</b> be addicted to it after you tell me. Would love to find out about other
+                people's vibes. yay!</p>
+                    <a href="https://open.spotify.com/user/xftko2c2nq2exfwg3tes82asl" class="social-button"><span class="icon">↗</span>mariopuff!</a>
+                </div>
+
+                <div class="card social-4">
+                    <h2>Reddit</h2>
+                    <p>I rarely post anything on Reddit, but when I do, it's probably stupid crap nobody
+                        cares about. I would appreciate it if you find me here, but expect me to check Reddit
+                        every two weeks.
+                    </p>
+                    <a href="https://www.reddit.com/user/SJM184/" class="social-button"><span class="icon">↗</span>SJM184</a>
+                </div>
+
+                <div class="card social-5">
+                    <h2>Twitch</h2>
+                    <p>I make games. I play games. I stream games. However, same as Reddit, I don't stream very often.
+                    Unlike Reddit, I sometimes do go here to see other people stream, for example our good friend CaseOh.</p>
+                    <a href="https://www.twitch.tv/mariopuff" class="social-button"><span class="icon">↗</span>mariopuff</a>
+                </div>
+
+                <div class="card social-6">
+                    <h2>Steam</h2>
+                    <p>I play games. I make games. I currently don't have access to Steam right now, so I'm only available on web.
+                        Currently, I'm at level 0, but I might buy games in the future. Who knows?
+                    </p>
+                    <a href="https://steamcommunity.com/id/mariopuff/" class="social-button"><span class="icon">↗</span>liminalsoups.184<br> (mariopuff)</a>
+                </div>
+
+                <div class="card social-7">
+                    <h2>X (Formerly Twitter)</h2>
+                    <p>This is my Formerly Twitter account. Nothing special, just stupid posts. I also don't go there
+                        frequently, so yeah. Also I only accept <b>real</b> followers, not those accounts which go
+                        follow random people.
+                    </p>
+                    <a href="https://x.com/toybunny_" class="social-button"><span class="icon">↗</span>toybunny_</a>
+                </div>
+
+                <div class="card social-8">
+                    <h2>Roblox</h2>
+                    <p>I have Roblox, like every normal kid. I play FNAF 2: Reimagined, Superliminal, and DOORS. Would love
+                    it if you friend me. My current goal is 20 friends. 😋</p>
+                    <a href="https://www.roblox.com/users/6220154646/profile" class="social-button"><span class="icon">↗</span>liminalsoups</a>
+                </div>
+
+            </div>
+            <div class="social-scroll-arrow right">&gt;</div>
+        </div>
+        <script src="scroll-social.js"></script> 
     </main>
+    <script src="mobile-menu.js"></script> 
 </body>
 </html>
