knock knock, it's the footer

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                         We have a lot of fun together, and the nicest thing is we are open
                         to invite one or two of you guys to hop in with us!
                     </p>
-                    <a href="https://www.youtube.com/@mariopuff184/" class="social-button"><span class="icon">↗</span>Mario_184</a><br>
-                    <a href="https://www.youtube.com/@mariopuffandhomies/" class="social-button"><span class="icon">↗</span>Mariopuff & Friends</a>
+                    <a href="https://www.youtube.com/@mariopuff184/" class="social-button" target="_blank"><span class="icon">↗</span>Mario_184</a><br>
+                    <a href="https://www.youtube.com/@mariopuffandhomies/" class="social-button" target="_blank"><span class="icon">↗</span>Mariopuff & Friends</a>
                 </div>
 
                 <div class="card social-2">
@@ -156,7 +156,7 @@
                         I use it to check on my friends, post funny memes, stream funny games, participate
                         in events, and more. Why don't you find me on Discord? DMs open.
                     </p>
-                    <a href="https://discord.com/users/832629415828914248" class="social-button"><span class="icon">↗</span>mariopuff</a>
+                    <a href="https://discord.com/users/832629415828914248" class="social-button" target="_blank"><span class="icon">↗</span>mariopuff</a>
                 </div>
 
                 <div class="card social-3">
@@ -164,7 +164,7 @@
                     <p>I listen to songs. So maybe you could reach out to me and share what your music taste is.
                     I <b>might</b> be addicted to it after you tell me. Would love to find out about other
                 people's vibes. yay!</p>
-                    <a href="https://open.spotify.com/user/xftko2c2nq2exfwg3tes82asl" class="social-button"><span class="icon">↗</span>mariopuff!</a>
+                    <a href="https://open.spotify.com/user/xftko2c2nq2exfwg3tes82asl" class="social-button" target="_blank"><span class="icon">↗</span>mariopuff!</a>
                 </div>
 
                 <div class="card social-4">
@@ -173,14 +173,14 @@
                         cares about. I would appreciate it if you find me here, but expect me to check Reddit
                         every two weeks.
                     </p>
-                    <a href="https://www.reddit.com/user/SJM184/" class="social-button"><span class="icon">↗</span>SJM184</a>
+                    <a href="https://www.reddit.com/user/SJM184/" class="social-button" target="_blank"><span class="icon">↗</span>SJM184</a>
                 </div>
 
                 <div class="card social-5">
                     <h2>Twitch</h2>
                     <p>I make games. I play games. I stream games. However, same as Reddit, I don't stream very often.
                     Unlike Reddit, I sometimes do go here to see other people stream, for example our good friend CaseOh.</p>
-                    <a href="https://www.twitch.tv/mariopuff" class="social-button"><span class="icon">↗</span>mariopuff</a>
+                    <a href="https://www.twitch.tv/mariopuff" class="social-button" target="_blank"><span class="icon">↗</span>mariopuff</a>
                 </div>
 
                 <div class="card social-6">
@@ -188,7 +188,7 @@
                     <p>I play games. I make games. I currently don't have access to Steam right now, so I'm only available on web.
                         Currently, I'm at level 0, but I might buy games in the future. Who knows?
                     </p>
-                    <a href="https://steamcommunity.com/id/mariopuff/" class="social-button"><span class="icon">↗</span>liminalsoups.184<br> (mariopuff)</a>
+                    <a href="https://steamcommunity.com/id/mariopuff/" class="social-button" target="_blank"><span class="icon">↗</span>liminalsoups.184<br> (mariopuff)</a>
                 </div>
 
                 <div class="card social-7">
@@ -197,14 +197,14 @@
                         frequently, so yeah. Also I only accept <b>real</b> followers, not those accounts which go
                         follow random people.
                     </p>
-                    <a href="https://x.com/toybunny_" class="social-button"><span class="icon">↗</span>toybunny_</a>
+                    <a href="https://x.com/toybunny_" class="social-button" target="_blank"><span class="icon">↗</span>toybunny_</a>
                 </div>
 
                 <div class="card social-8">
                     <h2>Roblox</h2>
                     <p>I have Roblox, like every normal kid. I play FNAF 2: Reimagined, Superliminal, and DOORS. Would love
                     it if you friend me. My current goal is 20 friends. 😋</p>
-                    <a href="https://www.roblox.com/users/6220154646/profile" class="social-button"><span class="icon">↗</span>liminalsoups</a>
+                    <a href="https://www.roblox.com/users/6220154646/profile" class="social-button" target="_blank"><span class="icon">↗</span>liminalsoups</a>
                 </div>
 
             </div>
@@ -214,4 +214,17 @@
     </main>
     <script src="mobile-menu.js"></script> 
 </body>
+<footer>
+    <div class="footer-connections">
+        <a href="https://www.youtube.com/@mariopuff184"><img class="icon-large" src="/assets/yt-footer.svg" alt="icon"></a>
+        <a href="https://discord.com/users/832629415828914248"><img class="icon-large" src="/assets/dsc-footer.svg" alt="icon"></a>
+        <a href="https://open.spotify.com/user/xftko2c2nq2exfwg3tes82asl"><img class="icon-large" src="/assets/spotify-footer.svg" alt="icon"></a>
+        <a href="https://www.reddit.com/user/SJM184/"><img class="icon-large" src="/assets/reddit-footer.svg" alt="icon"></a>
+        <a href="https://twitch.tv/mariopuff"><img class="icon-large" src="/assets/twitch-footer.svg" alt="icon"></a>
+        <a href="https://steamcommunity.com/id/mariopuff/"><img class="icon-large" src="/assets/steam-footer.svg" alt="icon"></a>
+        <a href="https://x.com/toybunny_"><img class="icon-large" src="/assets/formerlytwitter-footer.svg" alt="icon"></a>
+        <a href="https://www.roblox.com/users/6220154646/profile"><img class="icon-large" src="/assets/roblox-footer.svg" alt="icon"></a>
+    </div>
+    <p>&copy; 2024 liminalchopsoups</p>
+</footer>
 </html>
