--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@ permalink: /blog/
         </div>
       {% endif %}
       
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+      <h2><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
       <i><p class="date">{{ post.date | date: "%B %d, %Y" }}</p></i>
       <p>{{ post.excerpt }}</p>
     </div>
